--- a/templates/upload.html
+++ b/templates/upload.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <title>Distracted Driver Detection</title>
-<h2>Select an image to upload to detect the distracted driver</h2>
+<div style="border-style:solid;border-color: #04AA6D;">
+<h2 style="display:flex;align-items:center;justify-content:center">Select an image to upload to detect the distracted driver</h2>
 <p>
 	{% with messages = get_flashed_messages() %}
 	  {% if messages %}
@@ -13,17 +14,24 @@
 	{% endwith %}
 </p>
 {% if filename %}
-	<div>
-		<img src="{{ url_for('display_image', filename=filename) }}">
+	<div style="display:flex;align-items:center;justify-content:center">
+		<img style="width:300px;height:200px;object-fit:cover" src="{{ url_for('display_image', filename=filename) }}">
 	</div>
 {% endif %}
-<form method="post" action="/" enctype="multipart/form-data">
+<form style="display:flex;align-items:center;justify-content:center" method="post" action="/" enctype="multipart/form-data">
     <dl>
 		<p>
 			<input type="file" name="file" autocomplete="off" required>
 		</p>
     </dl>
     <p>
-		<input type="submit" value="Submit">
+		<input type="submit" style="background-color: #04AA6D;
+  							border: none;
+  							color: white;
+  							padding: 8px 16px;
+  							text-decoration: none;" 	
+		value="Submit">
 	</p>
 </form>
+
+</div>
