--- a/templates/upload.html
+++ b/templates/upload.html
@@ -16,7 +16,7 @@
 {% if filename %}
 	<div style="padding-top:30px;display:flex;flex-direction:column;align-items:center;justify-content:center">
 		<img style="width:300px;height:200px;object-fit:cover" src="{{ url_for('display_image', filename=filename) }}">
-		<h3>{{ prediction }}</h3>
+		<h3> Prediction: {{ prediction }}</h3>
 	</div>
 {% endif %}
 <form style="display:flex;align-items:center;justify-content:center" method="post" action="/" enctype="multipart/form-data">
